fix: adjust mobile layout, remove wrong margins
Commited at: Thu 12 May 2022 01:08:34 PM +04

--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -4,6 +4,7 @@
 
 .container {
     max-width: 45em;
+    min-width: 20em;
     margin: 2em auto;
     padding: 0 1.5em;
 }
@@ -22,6 +23,10 @@
     .info {
         flex-direction: column-reverse;
         align-items: center;
+    }
+    .info > .descriptions {
+        margin-right: 0;
+        width: 100%;
     }
 }
 
